Fix some spacing changes using bootstrap new utilities classes

--- a/app/assets/stylesheets/exercises.scss
+++ b/app/assets/stylesheets/exercises.scss
@@ -10,8 +10,7 @@ $exercise-color: #006600;
 }
 
 .exercise-show {
-  border-left-color: rgba($exercise-color, .5);
-
+  border-left-color: rgba($exercise-color, 0.5);
 }
 
 .small_label {
@@ -27,7 +26,10 @@ $exercise-color: #006600;
   margin-left: 2px;
 }
 
-.files, .tests, .model_solutions, .nested_fields {
+.files,
+.tests,
+.model_solutions,
+.nested_fields {
   .exercise-show.show-table {
     margin-bottom: 12px;
   }
@@ -65,7 +67,6 @@ $exercise-color: #006600;
   width: 80%;
   max-height: 110px;
   float: left;
-
 }
 
 .exercise-buttons {
@@ -74,7 +75,7 @@ $exercise-color: #006600;
   float: right;
 }
 
-.crossed-out:after{
+.crossed-out:after {
   content: '|';
   color: black;
   display: block;
@@ -91,7 +92,7 @@ $exercise-color: #006600;
   font-size: 1.5em;
 }
 
-.rating-panel {
+.rating-card {
   font-size: 8px;
   width: 18%;
   height: 100%;
@@ -116,8 +117,8 @@ $exercise-color: #006600;
 }
 
 .primary-description {
-  background-color: #CCC !important;
-  border-color: #CCC !important;
+  background-color: #ccc !important;
+  border-color: #ccc !important;
 }
 
 .description-lang-select {
@@ -127,20 +128,19 @@ $exercise-color: #006600;
   padding: 5px;
 }
 
-.fa-star, .fa-star-o, .fa-star-half-o {
-  color: #B79A00;
+.fa-star,
+.fa-star-o,
+.fa-star-half-o {
+  color: #b79a00;
 }
 
 .number-rating {
-
-  border: 2px #B79A00 solid;
+  border: 2px #b79a00 solid;
   border-radius: 4px;
-  font-size: 0.8em;
   padding: 1px 2px 1px 2px;
-  margin-right: 2px;
-  margin-top: -6px;
+  margin-right: 5px;
   line-height: 20px;
-  color: #B79A00;
+  color: #b79a00;
 }
 
 .popup-rating {
@@ -149,7 +149,7 @@ $exercise-color: #006600;
   display: none;
   background-color: white;
   position: absolute;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 2;
   padding: 2px 2px 2px 5px;
   margin-left: -45px;
@@ -182,26 +182,26 @@ $exercise-color: #006600;
 }
 
 .star-rating {
-  font-size:1.25em;
   cursor: pointer;
 }
 
-.programming-language, .visibility {
+.programming-language,
+.visibility {
   margin-right: 16px;
   padding: 2px 4px;
-  color: #7C7C7C;
-  border: 1px #7C7C7C solid;
+  color: #7c7c7c;
+  border: 1px #7c7c7c solid;
   border-radius: 4px;
 }
 
 .state-tag-dropdown {
-  color: #7C0000;
+  color: #7c0000;
   font-size: 18px;
   margin-right: 12px;
   padding: 2px 4px;
 }
 
-.state-tag-remove-button{
+.state-tag-remove-button {
   color: #000;
 }
 
@@ -216,7 +216,7 @@ $exercise-color: #006600;
   display: none;
   background-color: white;
   position: absolute;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 2;
   padding: 2px 2px 2px 5px;
   margin-top: 2px;
@@ -234,7 +234,7 @@ $exercise-color: #006600;
   padding: 6px 12px 6px 12px;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 .section {
@@ -251,7 +251,7 @@ $exercise-color: #006600;
 }
 
 .proglanguages {
-  width: 32%
+  width: 32%;
 }
 
 .select2-search_field {
@@ -270,7 +270,7 @@ $exercise-color: #006600;
 legend {
   font-size: 1.4em;
   margin-bottom: 20px;
-  border:none;
+  border: none;
 }
 
 .number {
@@ -283,7 +283,7 @@ legend {
   margin-right: 4px;
   line-height: 30px;
   text-align: center;
-  text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
   border-radius: 100%;
 }
 
@@ -297,7 +297,7 @@ legend {
 
 .form-description > .top-label {
   background-color: #eeeeee;
-  border: #CCCCCC 1px solid;
+  border: #cccccc 1px solid;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   padding: 5px;
@@ -319,16 +319,16 @@ legend {
   padding: 5px;
 }
 
-.panel.panel-default.history:last-child {
+.card.history:last-child {
   margin-bottom: unset !important;
 }
 
 .history.latest {
-  background-color: #EEE;
+  background-color: #eee;
 }
 
 .history.selected {
-  background-color: #DDD;
+  background-color: #ddd;
 }
 
 .button-panel {
@@ -356,7 +356,8 @@ legend {
       width: 100%;
       text-align: center;
       display: block;
-      .btn-default, .btn-group {
+      .btn-default,
+      .btn-group {
         width: 100%;
         margin-bottom: 5px;
       }
@@ -374,7 +375,8 @@ legend {
   padding: 10px 0;
   margin-bottom: 15px;
 
-  .slide-left, .slide-right{
+  .slide-left,
+  .slide-right {
     height: 200px;
     padding: 50px 0;
     position: absolute;
@@ -393,11 +395,12 @@ legend {
     }
   }
 
-  .slide-left.active, .slide-right.active {
+  .slide-left.active,
+  .slide-right.active {
     button {
       cursor: pointer;
       i {
-        color: gray
+        color: gray;
       }
     }
     button:active {
@@ -405,7 +408,8 @@ legend {
     }
   }
 
-  .slide-left.inactive, .slide-right.inactive {
+  .slide-left.inactive,
+  .slide-right.inactive {
     button {
       cursor: default;
       i {
@@ -416,7 +420,9 @@ legend {
       outline: none;
     }
 
-    button:focus {outline:0;}
+    button:focus {
+      outline: 0;
+    }
   }
 
   .slide-left {
@@ -450,7 +456,7 @@ legend {
     display: flex;
     position: relative;
 
-    .panel.displayed {
+    .card.displayed {
       display: inline-block;
       width: 31%;
       margin: 1%;
@@ -475,7 +481,7 @@ legend {
         }
       }
     }
-    .panel.not-displayed {
+    .card.not-displayed {
       display: none;
     }
   }
@@ -502,11 +508,11 @@ legend {
 
 .license {
   display: table;
-  width:100%;
+  width: 100%;
 
   .select {
     display: table-cell;
-    width: 50%
+    width: 50%;
   }
 
   .link {
@@ -546,7 +552,7 @@ legend {
 }
 
 .stats {
-  color: #7C7C7C;
+  color: #7c7c7c;
   height: 32px;
   line-height: 32px;
   vertical-align: middle;
@@ -562,11 +568,11 @@ legend {
 }
 
 .animated-sliding {
-  -webkit-transition: all .8s ease;
-  -moz-transition: all .8s ease;
-  -ms-transition: all .8s ease;
-  -o-transition: all .8s ease;
-  transition: all .8s ease;
+  -webkit-transition: all 0.8s ease;
+  -moz-transition: all 0.8s ease;
+  -ms-transition: all 0.8s ease;
+  -o-transition: all 0.8s ease;
+  transition: all 0.8s ease;
 }
 
 .more-btn-wrapper[style*='display: none'] ~ .labels {
@@ -578,7 +584,7 @@ legend {
   overflow-wrap: break-word;
 }
 
-.exercise-panel {
+.exercise-card {
   min-height: 155px;
 }
 
@@ -591,7 +597,7 @@ legend {
   margin-right: 0.4em;
 }
 
-.import-export-exercise{
+.import-export-exercise {
   display: flex;
 }
 
@@ -634,8 +640,12 @@ legend {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .errors {
